--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,11 @@
     <title>Employee Management System</title>
   </head>
   <body>
-    <h1>Welcome to the Employee Management System!</h1>
+    <h1>Welcome to Hajas Employee Management System !</h1>
     <p>Please choose one of the following options:</p>
     <ul>
-      <li><a href="/registration">Register a new employee</a></li>
-      <li><a href="/information">View employee information</a></li>
+      <li><a href="/registration">Employee Registration Form</a></li>
+      <li><a href="/information">View Information Of Employee</a></li>
     </ul>
   </body>
 </html>
