--- a/templates/home.html
+++ b/templates/home.html
@@ -1,24 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Employee Management System</title>
+  <title>Food Ordering App</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+  <style>
+    body {
+      background-image: url("{{ url_for('static', filename='foodapp.png') }}");
+      background-size: cover;
+      color: white;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1 class="mt-5">Welcome to the  Employee Management System!</h1>
+    <h1 class="mt-5">Welcome to the Food Ordering App!</h1>
     <p class="lead">Please choose one of the following options:</p>
     <ul class="list-group">
       <li class="list-group-item">
-        <a class="btn btn-primary" href="/registration">Register New Employee</a>
+        <a class="btn btn-primary" href="/order">Place an Order</a>
       </li>
       <li class="list-group-item">
-        <a class="btn btn-info" href="/information">View Information Of Employee</a>
+        <a class="btn btn-info" href="/information">View Available Restaurants</a>
       </li>
     </ul>
   </div>
   <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
 </html>
+
+
+
+
 
 
